# optopodi

./: .gitignore  .gitmodules  .graphqlrc.yml  404.html  CODE_OF_CONDUCT.md  Cargo.toml  README.md  bors.toml  client_secret.json  contributing.html  crate-information.json  index.html  print.html  report-template.toml  report.html  searchindex.js  searchindex.json  top-crate.sh  welcome.html
.github/workflows/: mdbook.yml  rust.yml
book/: book.toml
book/src/: SUMMARY.md  contributing.md  report.md  welcome.md
gql/: count_issues.graphql  count_pull_requests.graphql  issue_search.graphql  organization_repos.graphql  prs_and_participants.graphql  query_search.graphql
src/: google_sheets.rs  main.rs  metrics.rs  report.rs  token.rs  top_crates.rs  util.rs
src/metrics/: all_repos.rs  export_to_sheets.rs  gql.rs  issue_closures.rs  list_repos.rs  print.rs  repo_participants.rs  util.rs
src/report/: high_contributor.rs  issue_closure.rs  repo_info.rs  repo_participant.rs  top_crates.rs
