[package]
name = "github-metrics"
version = "0.1.0"
authors = ["Niko Matsakis <niko@alum.mit.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
octocrab = "0.9.0"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
fehler = "1"
chrono = "0.4"
url = "2.2.2"
clap = "3.0.0-beta.2"
