[package]
name = "github-metrics"
version = "0.1.0"
authors = ["Niko Matsakis <niko@alum.mit.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
octocrab = "0.9.0"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
fehler = "1"
chrono = "0.4"
url = "2.2.2"
clap = "3.0.0-beta.2"
serde = "^1.0"
serde_derive = "1.0"
serde_json = "^1.0"
yup-oauth2 = "^5.0"
sheets = "0.1.10"
reqwest = "0.11.3"
hyper = "^0.14"
hyper-rustls = "^0.22"
snafu = "0.6.10"
toml = "0.5.8"
async-trait = "0.1.50"
graphql_client = "0.9.0"
log = "0.4"
env_logger = "0.8"
csv = "1.1"
