[package]
name = "optopodi"
version = "0.1.0"
authors = ["Niko Matsakis <niko@alum.mit.edu>"]
edition = "2018"

[dependencies]
octocrab = "0.9.0"
tokio = { version = "1", features = ["full"] }
stable-eyre = "0.2.2"
fehler = "1"
clap = "3.0.0-beta.2"
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
toml = "0.5.8"
async-trait = "0.1.50"
graphql_client = "0.9.0"
log = "0.4"
env_logger = "0.8"
csv = "1.1"
semver = "1.0"
rust-playground-top-crates = "0.1.0"
